--- a/package.json
+++ b/package.json
@@ -1,14 +1,103 @@
 {
   "name": "3-github",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "dead-server --port=4003",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "dead-server": "^1.0.6"
-  }
+  },
+  "dependencies": {
+    "ansi-styles": "^4.3.0",
+    "accepts": "^1.3.8",
+    "anymatch": "^3.1.2",
+    "batch": "^0.6.1",
+    "basic-auth": "^2.0.1",
+    "binary-extensions": "^2.2.0",
+    "braces": "^3.0.2",
+    "apache-md5": "^1.1.8",
+    "bcryptjs": "^2.4.3",
+    "chokidar": "^3.5.3",
+    "chalk": "^4.1.2",
+    "debug": "^2.6.9",
+    "connect": "^3.7.0",
+    "destroy": "^1.0.4",
+    "depd": "^2.0.0",
+    "duplexer": "^0.1.2",
+    "encodeurl": "^1.0.2",
+    "ee-first": "^1.1.1",
+    "etag": "^1.8.1",
+    "escape-html": "^1.0.3",
+    "faye-websocket": "^0.11.4",
+    "event-stream": "^3.3.4",
+    "color-convert": "^2.0.1",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.1.2",
+    "fresh": "^0.5.2",
+    "from": "^0.1.7",
+    "glob-parent": "^5.1.2",
+    "has-flag": "^4.0.0",
+    "http-parser-js": "^0.5.8",
+    "http-errors": "^1.8.1",
+    "is-binary-path": "^2.1.0",
+    "inherits": "^2.0.4",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "cors": "^2.8.5",
+    "apache-crypt": "^1.2.6",
+    "is-number": "^7.0.0",
+    "map-stream": "^0.1.0",
+    "is-wsl": "^1.1.0",
+    "http-auth": "^3.1.3",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "morgan": "^1.10.0",
+    "negotiator": "^0.6.3",
+    "ms": "^2.0.0",
+    "normalize-path": "^3.0.0",
+    "object-assign": "^4.1.1",
+    "on-headers": "^1.0.2",
+    "on-finished": "^2.3.0",
+    "pause-stream": "^0.0.11",
+    "parseurl": "^1.3.3",
+    "picomatch": "^2.3.1",
+    "readdirp": "^3.6.0",
+    "range-parser": "^1.2.1",
+    "safe-buffer": "^5.1.2",
+    "send": "^0.17.2",
+    "serve-index": "^1.9.1",
+    "setprototypeof": "^1.2.0",
+    "split": "^0.3.3",
+    "proxy-middleware": "^0.15.0",
+    "stream-combiner": "^0.0.4",
+    "statuses": "^1.5.0",
+    "supports-color": "^7.2.0",
+    "through": "^2.3.8",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "websocket-driver": "^0.7.4",
+    "color-name": "^1.1.4",
+    "unix-crypt-td-js": "^1.1.4",
+    "websocket-extensions": "^0.1.4",
+    "uuid": "^3.4.0",
+    "vary": "^1.1.2",
+    "open": "^6.4.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TVPerformance/3-github.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/TVPerformance/3-github/issues"
+  },
+  "homepage": "https://github.com/TVPerformance/3-github#readme",
+  "description": ""
 }
